--- a/index.ipynb
+++ b/index.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "cbacbc03",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e21e668a",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d49391ac",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c47223d2",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c36a76b5",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "5b4ffa17",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4bf257c1",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
        "[20640 rows x 10 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "14824f28",
    "metadata": {},
    "outputs": [
@@ -524,7 +524,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1521 17789  2589 ... 17999 12978  6355]\n",
+      "[3842 4627 5041 ... 5450 7890 5674]\n",
       "Total length:  20640\n",
       "The Length of train: 16512\n",
       "The Length of test: 4128\n"
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a33446b4",
    "metadata": {},
    "outputs": [],
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "450ddd8f",
    "metadata": {},
    "outputs": [],
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "dc7bcb90",
    "metadata": {},
    "outputs": [
@@ -826,7 +826,7 @@
        "[20640 rows x 10 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "89f2c06c",
    "metadata": {},
    "outputs": [
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "0dcd1db1",
    "metadata": {},
    "outputs": [],
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "98aadb8e",
    "metadata": {},
    "outputs": [],
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "fc3bae43",
    "metadata": {},
    "outputs": [
@@ -932,7 +932,7 @@
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "033a636f",
    "metadata": {},
    "outputs": [
@@ -1039,7 +1039,7 @@
        "5                   11.44        11.43    12.09          -0.08          5.63"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "614faba5",
    "metadata": {},
    "outputs": [],
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "f4a5d87d",
    "metadata": {},
    "outputs": [],
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "df91766d",
    "metadata": {},
    "outputs": [
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "c6d371ad",
    "metadata": {},
    "outputs": [
@@ -1164,7 +1164,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "16b3eada",
    "metadata": {},
    "outputs": [
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "687a86e4",
    "metadata": {},
    "outputs": [
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "27bf4a51",
    "metadata": {},
    "outputs": [],
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "12197303",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1287,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "65b9dbb9",
    "metadata": {},
    "outputs": [],
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "26480e2e",
    "metadata": {},
    "outputs": [],
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "5cc4871a",
    "metadata": {},
    "outputs": [],
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "70a89e2d",
    "metadata": {},
    "outputs": [
@@ -1962,7 +1962,7 @@
        "SimpleImputer(strategy='median')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1973,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "087b8c98",
    "metadata": {},
    "outputs": [],
@@ -1991,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "87b00026",
    "metadata": {},
    "outputs": [
@@ -2078,7 +2078,7 @@
        "6753        <1H OCEAN"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2099,7 +2099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "25d4bc3b",
    "metadata": {},
    "outputs": [],
@@ -2112,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "684c56b8",
    "metadata": {},
    "outputs": [
@@ -2131,7 +2131,7 @@
        "       [0.]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2150,7 +2150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "0ed18028",
    "metadata": {},
    "outputs": [
@@ -2161,7 +2161,7 @@
        "       dtype=object)]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2184,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "94fbbd5d",
    "metadata": {},
    "outputs": [],
@@ -2197,7 +2197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "422c9c01",
    "metadata": {},
    "outputs": [
@@ -2300,7 +2300,7 @@
        "14689      1845.0       780.0         2.2618          INLAND  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2319,7 +2319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "id": "f784c2d4",
    "metadata": {},
    "outputs": [],
@@ -2333,11 +2333,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "id": "3eb24d04",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# using Standard Scaler\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "standard_scaler = StandardScaler()\n",
@@ -2346,7 +2347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "id": "f30cbed4",
    "metadata": {},
    "outputs": [
@@ -2373,43 +2374,234 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "id": "557878f5",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>median_house_value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>13096</th>\n",
+       "      <td>458300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14973</th>\n",
+       "      <td>483800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3785</th>\n",
+       "      <td>101700.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14689</th>\n",
+       "      <td>96100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20507</th>\n",
+       "      <td>361800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14207</th>\n",
+       "      <td>500001.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13105</th>\n",
+       "      <td>88800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19301</th>\n",
+       "      <td>148800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19121</th>\n",
+       "      <td>500001.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19888</th>\n",
+       "      <td>233300.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16512 rows × 1 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "13096    458300.0\n",
-       "14973    483800.0\n",
-       "3785     101700.0\n",
-       "14689     96100.0\n",
-       "20507    361800.0\n",
-       "           ...   \n",
-       "14207    500001.0\n",
-       "13105     88800.0\n",
-       "19301    148800.0\n",
-       "19121    500001.0\n",
-       "19888    233300.0\n",
-       "Name: median_house_value, Length: 16512, dtype: float64"
+       "       median_house_value\n",
+       "13096            458300.0\n",
+       "14973            483800.0\n",
+       "3785             101700.0\n",
+       "14689             96100.0\n",
+       "20507            361800.0\n",
+       "...                   ...\n",
+       "14207            500001.0\n",
+       "13105             88800.0\n",
+       "19301            148800.0\n",
+       "19121            500001.0\n",
+       "19888            233300.0\n",
+       "\n",
+       "[16512 rows x 1 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "housing_labels"
+    "housing_labels.to_frame()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5674c1e",
+   "metadata": {},
+   "source": [
+    "### Understanding the importance of `inverse_transformation()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "222d8926",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "target_scaler = StandardScaler()\n",
+    "\n",
+    "# Using StandardScaler transformation\n",
+    "scaled_labels = target_scaler.fit_transform(housing_labels.to_frame())\n",
+    "\n",
+    "# getting the instance of LinearRegression\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "# Applying fit estimation\n",
+    "model.fit(housing[[\"median_income\"]],scaled_labels)\n",
+    "\n",
+    "# Generating new data\n",
+    "some_new_data = housing[[\"median_income\"]].iloc[:5]\n",
+    "\n",
+    "# Training the model\n",
+    "scaled_predictions = model.predict(some_new_data)\n",
+    "\n",
+    "# Inverse transforming the scaled predictons\n",
+    "prediction = target_scaler.inverse_transform(scaled_predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ae5c199",
+   "metadata": {},
+   "source": [
+    "### Why we use `inverse_transform()` after prediction\n",
+    "\n",
+    "When training the model, the target values (`housing_labels`) were scaled using `StandardScaler`, producing `scaled_labels`. The LinearRegression model learns a relationship in this scaled target space. Therefore, its predictions (`scaled_predictions`) are also returned in the scaled form.\n",
+    "\n",
+    "To convert these predictions back to the original units of the target variable, we apply:\n",
+    "\n",
+    "```python\n",
+    "prediction = target_scaler.inverse_transform(scaled_predictions)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f656571",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---\n",
+    "\n",
+    "### **Key takeaway**\n",
+    "✔ `inverse_transform()` reverses scaling using the scaler’s saved parameters  \n",
+    "✔ The model always works in whatever scale it was trained on  \n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfbdd5cd",
+   "metadata": {},
+   "source": [
+    "In order to avoid manually scaling, theres a better version to that."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06c008da",
+   "metadata": {},
+   "source": [
+    "### Using `TransformedTargetRegressor` with `StandardScaler`\n",
+    "\n",
+    "When we want to scale the target variable `y` (for example with `StandardScaler`), we can use `TransformedTargetRegressor` to automate both the forward transform during training and the inverse transform during prediction.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "ee305d26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import TransformedTargetRegressor\n",
+    "\n",
+    "model = TransformedTargetRegressor(LinearRegression(),\n",
+    "                                   transformer=StandardScaler())\n",
+    "\n",
+    "model.fit(housing[[\"median_income\"]],housing_labels)\n",
+    "predictions = model.predict(some_new_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc921e78",
+   "metadata": {},
+   "source": [
+    "## Custom Transformers"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "222d8926",
+   "id": "8f3f24c2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import FunctionTransformer\n",
+    "\n",
+    "log_transformer = FunctionTransformer(np.log,inverse_func=np.exp)\n",
+    "log_pop = log_transformer.transform(housing[[\"population\"]])"
+   ]
   }
  ],
  "metadata": {
