--- a/index.ipynb
+++ b/index.ipynb
@@ -3149,12 +3149,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b6e3d6c",
+   "metadata": {},
+   "source": [
+    "Lets build the pipeline fr"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2619f4ea",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def column_ratio(X):\n",
+    "    return X[:,[0]]/X[:,[1]]\n",
+    "\n",
+    "def ratio_name(function_transformer, feature_names_in):\n",
+    "    return [\"ratio\"] #feature names out\n",
+    "\n",
+    "def ratio_pipeline():\n",
+    "    return make_pipeline(SimpleImputer(strategy=\"median\"),\n",
+    "                         FunctionTransformer(column_ratio,feature_names_out=ratio_name),\n",
+    "                         StandardScaler()\n",
+    "                         )\n",
+    "\n",
+    "log_pipeline = make_pipeline(\n",
+    "    SimpleImputer(strategy=\"median\"),\n",
+    "    FunctionTransformer(np.log, feature_names_out='one-to-one'),\n",
+    "    StandardScaler()\n",
+    ")\n",
+    "cluster_simil = ClusterSimilarity(n_clusters=10,gamma=1.,random_state=42)\n",
+    "default_num_pipeline = make_pipeline(SimpleImputer(strategy=\"median\"),StandardScaler())\n",
+    "\n",
+    "preprocessing = ColumnTransformer([\n",
+    "     (\"bedrooms\", ratio_pipeline(), [\"total_bedrooms\", \"total_rooms\"]),\n",
+    "        (\"rooms_per_house\", ratio_pipeline(), [\"total_rooms\", \"households\"]),\n",
+    "        (\"people_per_house\", ratio_pipeline(), [\"population\", \"households\"]),\n",
+    "        (\"log\", log_pipeline, [\"total_bedrooms\", \"total_rooms\", \"population\",\n",
+    "                               \"households\", \"median_income\"]),\n",
+    "        (\"geo\", cluster_simil, [\"latitude\", \"longitude\"]),\n",
+    "        (\"cat\", cat_pipeline, make_column_selector(dtype_include=object)),\n",
+    "    ],\n",
+    "    remainder=default_num_pipeline) # one column remaining: housing_median_age"
+   ]
   }
  ],
  "metadata": {
